--- a/index7.html
+++ b/index7.html
@@ -12,7 +12,7 @@
         <h2>SAVAŞTASIN LÜTFEN BEKLE</h2>
         <div class="box">
             <form autocomplete="off" action="index6.html">
-                <div class="timer" id="sayac"></div>
+                <div class="timer" id="zaman"></div>
                 <script src="script.js"></script>
                 
             </form>
