--- a/index8.html
+++ b/index8.html
@@ -24,7 +24,9 @@
                var sayi= Math.floor(Math.random()*(max-min))+min;
                  return sayi;
              }
-             
+             if   (document.referrer == "file:///C:/Users/Enis/Documents/GitHub/odev/index8.html") 
+          window.location.reload(); 
+          
          </script>
             </form>
         </div>
